test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_sizeof_arr_subscript.plx
pub fn main(none) i32 {
    arr: *i32 = $(10, 20, 30)
    return sizeof(arr)[1]
}
